static/css/sheets.css
/* ... */
.inlineAddDesc {
    text-transform: uppercase;
	color: #999;
	font-size:12px;
	margin: 40px 0;

}

.flexContainer {
	display:flex;
}

#connectionButton {
	display:none;
}

.inlineAddTextInput {
	width: 320px;
	height: 32px;
	margin: 0;
	float:left;
	font-size:14px;
	padding-left: 12px;
	padding-right: 12px;
}

.inlineAddOr {
	display:inline-block;
	color: #999;
    margin: 6px;

}
.inlineAddSourceByttons {
	display:inline-block;
}
#sheet .button, .sheetsEditNavTop .button, .modal .button {
	background-color: #212e50;
	border-color: #212e50;
	padding: 12px 24px;
}
.sheetsEditNavTop .button {
    padding: 5px 12px;
}

#customTextLanguageToggle {
	float: right;
    margin-top: -65px;
    margin-right: 67px;
	height:30px;
	width:160px;

}

#customTextLanguageToggle .toggleOption {
	height: 30px;
	line-height: inherit;
	width: 50px;
}

#customTextLanguageToggle .toggleOption img {
	height: 16px;
	width: 16px;
    margin-bottom: 13px;
}

#customTextContainer, #addmediaDiv, #addcommentDiv, #addsourceDiv{
	width: 702px;
    margin: 0 74px 0 74px;
}
.blockContainer {
	display: inline-block;
	width:100%;
}

#customTextContainer{
	margin-bottom: 40px;
}

#addsourceDiv .buttonContainer{
	float:right;
}

#addcommentDiv .contentToAdd {
	margin-bottom:40px;
}


.contentToAdd {
	padding: 10px;
	border: 1px solid #cecece;
	border-radius: 5px;
	margin: 0;
	text-align:left;
}

.contentToAdd:nth-child(even) {
	margin-left:6px;
}


.contentToAdd > * {
	margin:0 !important;
}


.customTextEditables.en {
	font-family: "Times New Roman", "Georgia", serif;
}
.customTextEditables.he {
	text-align: right;
}
#inlineAddMediaInput{
	width: 280px;
}

.s2AddedBy {
	font-size:inherit;
	font-style: inherit;
	color:#999;
	font-weight:bold;
	display:inline;
	float:left;
	margin-right: 7px;
}

a.userLink{
	color:#333;
}


.s2AddedBy a.userLink{
	color:#999;
}


.commentIcon {
	color:#999;
	font-size: .75em;
	float:left;
	margin-right: 7px;
}
.sheetsEditNavTop #save, .sheetsEditNavTop #share  {
	float: right;
    margin: 5px 0 0 0;
	border-radius: 3px;
	font-weight: 300;
	font-size: 12px;
	height: 30px;
}
.sheetsEditNavTop #save img, .sheetsEditNavTop #share img  {
    margin-bottom: 2px;
    margin-right: 2px;

}


#shareURL {
	cursor: text;
	background-color: #fff;
    font-style: italic;
    width: 100%;
    box-sizing: border-box;
    height: 30px;
}

#shareWithOthers .content .inputHeader {
	margin: 30px 0 15px 0;
}

#shareWithOthers .content select {
	width: 100%;
}

#shareWithOthers {
	text-align: center;
	width:400px;
}

#sharingDesc {
    color: #999;
    font-size: 13px;
    text-align: center;
    margin-bottom: 30px;
    margin-top: 10px;
}

#assignmentDirections {
	margin: 30px 0;
	text-align: center;
}

#assignedSheets .button {
	background-color: #fff;
	border:#ccc;
	width:100%;
}
#assignedSheets {
	display: none;
}

#assignedSheets .button a {
	text-decoration: none;
}

.s2Modal {
	padding: 30px;
	background-color: #F9F9F7;
	border: 1px solid #999;
	border-radius: 6px;
	width: 400px;
}
.s2Modal .title {
	font-size: 20px;
	margin: 0;
	text-align: center;
}

.s2Modal .content {
	color: #999;
	text-align: left;
}

.s2Modal .ok.button {
	margin: 0 auto;
}

.s2Modal input, .s2Modal textarea {
	margin-bottom: 0;
	background-color: #fff;
	height:40px;
	padding: 20px 10px;
    box-sizing: border-box;
}

.s2Modal select {
	background-color: #fff;
    box-sizing: border-box;
}

.s2Modal .center {
	text-align: center;
}

#panelWrapBox {
	display: none;
}

#tags {
	border: 1px solid #aaaaaa;
	background: #ffffff;
	color: #222222;
    margin-top: 30px;
    margin-bottom: 30px;
}

.ui-widget-content {
	border: 1px solid #d3d3d3;
    background: #e6e6e6;
    font-weight: normal;
}

.ui-icon-close {
    background-position: -80px -128px;
}

ul.tagit li.tagit-choice .tagit-close .text-icon {
	display:block;
}

.ui-icon {
    width: 16px;
    height: 16px;
}
.ui-icon {
    display: block;
    text-indent: -99999px;
    overflow: hidden;
    background-repeat: no-repeat;
}

.ui-autocomplete .ui-menu-item a.ui-state-focus {
  background-color: #fff;
}

ul.tagit li.tagit-choice {
    color: #333;
	background-color: #F9F9F7;
	border-radius: 2px;
}

a.tagit-close {
	color: #999;
	text-decoration: none;
}

.close-button:after {
	color: #999;
	font: 14px/100% arial, sans-serif;
	position: absolute;
	right: 15px;
	text-decoration: none;
	text-shadow: 0 1px 0 #fff;
	top: 15px;
	content: "X"
}

.moveSourceUp img, .moveSourceDown img, .diagramSource img  {
    width:16px;
}

.source .diagram, .diagramTools, .diagramTagWindow, .addTagPanel {
	display: none;
}

#sheet.highlightMode #sources .sheetItem .diagram, #sheet.highlightMode .diagramTools {
	display: block;
}

#sheet.highlightMode #sources .sheetItem .text {
	display: none;
}

#highlightMenu {
	display: none;
}


.diagramTagWindow {
  	position: absolute;
	z-index: 2;
	width: 320px;
	background-color: #f9f9f7;
	border-radius: 3px;
	border: 1px solid #ccc;
	font-family: "proxima-nova","Helvetica Neue","Helvetica",sans-serif;

}

.diagramTagWindow .save.button {
    margin: 20px;
    width: 280px;
    text-align: center;

}

.diagramSegment {
	display: inline;
}

.editCheckToggle {
    display: inline-block;
    float: right;
    height: 22px;
}


.tagSelectorTitle {
	font-weight: 400;
    text-align: center;
    margin: 20px;
}

.splitDiagramSegment, .createNewDiagramTag {
	background-color: #fff;
	margin: 10px 20px;
	border-radius: 3px;
	border: 1px solid transparent;
	color: #999;
	padding: 5px 10px;
	font-size: 16px;
	cursor: pointer;
}

.splitDiagramSegment.active, .createNewDiagramTag.active {
	border: 1px solid #ccc;
	color: #333;
}

.splitDiagramSegment, .noSelect, .colorSelect div, .addTagPanel, .newTag {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

}
/* ... */

